--- a/VideoGameStore/wwwroot/css/components_css/genres.css
+++ b/VideoGameStore/wwwroot/css/components_css/genres.css
@@ -5,7 +5,7 @@
     position: fixed;
     left: 0;
     right: 0;
-    top: -450px;
+    top: 0;
     bottom: 0;
     background-color: rgba(0, 0, 0, 0.7);
     display: none; 
